@@ -3,9 +3,7 @@
 #ifndef VORONOI_NOISE_H
 #define VORONOI_NOISE_H
 
-#define RANDOM_VECTOR_PADDING 6.0f
-#define VERTICAL_SCALING_FACTOR 2.5268f
-#define VORONOI_POINTS_SEED 216797466
+#define VERTICAL_SCALING_FACTOR 3.2268f
 
 typedef struct {
     int type;
@@ -14,6 +12,6 @@ typedef struct {
 
 void initializeVoronoiPoints(VoronoiPoint points[], int numPointsPerType, int numTypes, float z, int seed);
 
-int sampleVoronoiNoise(Vec3 position, VoronoiPoint points[], int numTypes);
+int sampleVoronoiNoise(VoronoiPoint points[], int numPoints, Vec3 position, float lacunarity);
 
 #endif
